objects/ASI_CRM_KR_A_P_Guideline__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_Account_Code__c</fullName>
        <label>Account Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.ASI_KOR_Venue_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>A&amp;P Guidelines</relationshipLabel>
        <relationshipName>A_P_Guidelines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Value POS</fullName>
                </value>
                <value>
                    <fullName>Bar/Room Styling</fullName>
                </value>
                <value>
                    <fullName>Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Customized activation for contracted venue</fullName>
                </value>
                <value>
                    <fullName>AD - Digital</fullName>
                    <isActive>false</isActive>
                    <label>AD - Digital</label>
                </value>
                <value>
                    <fullName>AD - Traditional</fullName>
                    <isActive>false</isActive>
                    <label>AD - Traditional</label>
                </value>
                <value>
                    <fullName>Annual Contract Cash out</fullName>
                    <isActive>false</isActive>
                    <label>Annual Contract Cash out</label>
                </value>
                <value>
                    <fullName>Basic POS</fullName>
                    <isActive>false</isActive>
                    <label>Basic POS</label>
                </value>
                <value>
                    <fullName>Claim Support</fullName>
                    <isActive>false</isActive>
                    <label>Claim Support</label>
                </value>
                <value>
                    <fullName>Consumer Promotions</fullName>
                    <isActive>false</isActive>
                    <label>Consumer Promotions</label>
                </value>
                <value>
                    <fullName>Coupon PM</fullName>
                    <isActive>false</isActive>
                    <label>Coupon PM</label>
                </value>
                <value>
                    <fullName>Digital other</fullName>
                    <isActive>false</isActive>
                    <label>Digital other</label>
                </value>
                <value>
                    <fullName>Export</fullName>
                    <isActive>false</isActive>
                    <label>Export</label>
                </value>
                <value>
                    <fullName>Gift to Customer</fullName>
                    <isActive>false</isActive>
                    <label>Gift to Customer</label>
                </value>
                <value>
                    <fullName>Giftset</fullName>
                    <isActive>false</isActive>
                    <label>Giftset</label>
                </value>
                <value>
                    <fullName>Golf</fullName>
                    <isActive>false</isActive>
                    <label>Golf</label>
                </value>
                <value>
                    <fullName>Hotel Membership</fullName>
                    <isActive>false</isActive>
                    <label>Hotel Membership</label>
                </value>
                <value>
                    <fullName>Limited Edition</fullName>
                    <isActive>false</isActive>
                    <label>Limited Edition</label>
                </value>
                <value>
                    <fullName>MD Cost</fullName>
                    <isActive>false</isActive>
                    <label>MD Cost</label>
                </value>
                <value>
                    <fullName>Maison PR</fullName>
                    <isActive>false</isActive>
                    <label>Maison PR</label>
                </value>
                <value>
                    <fullName>Meeting and Workshop</fullName>
                    <isActive>false</isActive>
                    <label>Meeting and Workshop</label>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                    <isActive>false</isActive>
                    <label>Mentoring</label>
                </value>
                <value>
                    <fullName>NPD</fullName>
                    <isActive>false</isActive>
                    <label>NPD</label>
                </value>
                <value>
                    <fullName>NTS RFID Support</fullName>
                    <isActive>false</isActive>
                    <label>NTS RFID Support</label>
                </value>
                <value>
                    <fullName>OFF promotion</fullName>
                    <isActive>false</isActive>
                    <label>OFF promotion</label>
                </value>
                <value>
                    <fullName>OFF visibility</fullName>
                    <isActive>false</isActive>
                    <label>OFF visibility</label>
                </value>
                <value>
                    <fullName>ON promotion</fullName>
                    <isActive>false</isActive>
                    <label>ON promotion</label>
                </value>
                <value>
                    <fullName>ON visibility</fullName>
                    <isActive>false</isActive>
                    <label>ON visibility</label>
                </value>
                <value>
                    <fullName>Off Merchandising</fullName>
                    <isActive>false</isActive>
                    <label>Off Merchandising</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Branch__c</fullName>
        <formula>ASI_CRM_KR_Customer__r.ASI_CRM_KR_Branch__c</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>A&amp;P Guidelines</relationshipLabel>
        <relationshipName>A_P_Guidelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_External_ID_Upload__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID(Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_PVA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PVA</label>
        <referenceTo>ASI_CRM_KR_PVA__c</referenceTo>
        <relationshipLabel>A&amp;P Guidelines</relationshipLabel>
        <relationshipName>A_P_Guidelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_P_V_A__c</fullName>
        <formula>text(ASI_CRM_KR_PVA__r.ASI_CRM_KR_PVA__c)</formula>
        <label>PVA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Code</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>A&amp;P Guidelines</relationshipLabel>
        <relationshipName>A_P_Guidelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>A&amp;P Guideline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Fiscal_Year__c</columns>
        <columns>ASI_CRM_KR_Customer__c</columns>
        <columns>ASI_CRM_KR_PVA__c</columns>
        <columns>ASI_CRM_KR_Activity_Type__c</columns>
        <columns>ASI_CRM_KR_Branch__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_CRM_KR_Amount__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_KR_External_ID_Upload__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>A&amp;P Guideline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A&amp;P Guidelines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_A_P_Guideline</fullName>
        <active>true</active>
        <label>ASI CRM KR A&amp;P Guideline</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>